feat: adding project metadata
